auth-service/deploy-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: auth-service
        image: 590183807419.dkr.ecr.us-east-1.amazonaws.com/auth-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
