auth-service/ingress-auth-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ing
  namespace: auth-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service-svc
              port:
                number: 8001
